--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,12 @@ dependencies {
     //api "com.android.support:support-v4:28.0.0"
     implementation "com.android.support:gridlayout-v7:28.0.0"
 
-    api 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    api 'com.github.bumptech.glide:okhttp3-integration:4.9.0' // 新增
-    api 'com.github.bumptech.glide:annotations:4.9.0' // 新增
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0' // 新增
+    implementation 'com.github.bumptech.glide:annotations:4.9.0' // 新增
 
-    //implementation project(':photoviewex')
-    //implementation 'com.github.zywudev:PhotoViewEx:1.0.0'
-
-    //api 'com.github.MrWangChong:DragPhotoView:1.1.2'
+    implementation 'pub.devrel:easypermissions:2.0.1'
 
     implementation project(':videoplay')
 }
